
	* lua-avt.c (lavt_avatar_image_default, lavt_avatar_image_none):
	functions removed again

	* lua-avt.c (lavt_avatar_image): renamed from lavt_avatar_image_data

	* lua-avt.c (lavt_show_image): renamed from lavt_show_image_string
	also supports XPM data in a table now

	* lua-avt.c: avt.load_audio_string and avt.load_base_audio_string were
	renamed to avt.load_audio and avt.load_base_audio

2012-04-09  Andreas K. Foerster  <info@akfoerster.de>

	* lua-avt.c (import_xpm): new function
	set_avatar and all callers adapted

	* lua-avt.c (lavt_avatar_image_default, lavt_avatar_image_none)
	(lavt_avatar_image_data, lavt_avatar_image_file): new functions

	* lua-avt.c (lavt_set_title): store values in registry

	* lua-avt.c (lavt_start): new function

	* lua-avt.c: deprecated funtions removed

	* avatar.c (avt_set_title): fix: check if encoding was set

2012-04-07  Andreas K. Foerster  <info@akfoerster.de>

	* configure, mingw/Makefile.in: improve cross-compiling

	* avatar.c (avt_show_image_file, avt_show_image_stream)
	(avt_show_image_data, avt_import_image_data, avt_import_image_file)
	(avt_import_image_stream, avt_avatar_image_data, avt_avatar_image_file):
	check if RW has data

	* avatar.c (avt_avatar_image_stream): new function

	* avatar.c (avt_show_image_rw, avt_avatar_image_rw): new functions

2012-04-06  Andreas K. Foerster  <info@akfoerster.de>

	* configure: new option --disable-deprecated

2012-04-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c, avatar-default.c, avatar-audio.c (DISABLE_DEPRECATED):
	new macro

2012-04-04  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h: renamed avt_image back to avt_image_t
	(only for backwards compatibility; it's deprecated anyway)

	* akfavatar.h, avtaddons.h:
	don't use AVT_BEGIN_DECLS, AVT_END_DECLS anymore
	instead redefine AVT_API, AVT_ADDON

	* akfavatar.h: macro AVT_UNUSED removed, callers adapted

	* akfavatar.h, avatar-audio.c (avt_start_audio):